# DummyCoder

./: .gitignore  .hgignore  dumco.py
UT/: test-utils.sh  test.sh
UT/schema-validator/: CMakeLists.txt  schema-validator.cpp
UT/schemas/: dc.xsd
UT/schemas/COLLADA15/: collada_schema_1_5.xsd
UT/schemas/DimML301/: DMLschema_301-final.xsd
UT/schemas/Docbook50/: xlink.xsd  xml.xsd
UT/schemas/GML330/: linearRefTowardsReferent.xsd  referenceableGrid.xsd  tin.xsd
UT/schemas/MatML31/: matml31.xsd
UT/schemas/NewML12/: NewsML_1.2.xsd
UT/schemas/ODF12/: OpenDocument-v1.2-os-schema.xsd  chart.xsd  config.xsd  db.xsd  dc.xsd  dr3d.xsd  draw.xsd  fo.xsd  form.xsd  grddl.xsd  meta.xsd  office.xsd  script.xsd  smil.xsd  style.xsd  svg.xsd  xhtml.xsd
UT/schemas/UDDI3/: uddi_v3replication.xsd
UT/schemas/X3D32/: x3d-3.2.xsd
UT/schemata/: dc.xsd  dcmitype.xsd  dcterms.xsd  xlink.xsd
UT/schemata/CML211+/: STMML.xsd  cmlComp.xsd  cmlCore.xsd
UT/schemata/COLLADA15/: collada_schema_1_5.xsd
UT/schemata/Docbook50/: docbook.xsd  docbook.xsd.trang  xlink.xsd.trang
UT/schemata/ECMA323.6/: csta.xsd  my_envelope.xsd
UT/schemata/FB20/: FictionBook2.xsd
UT/schemata/GML330/: extdBaseTypes.xsd  geometryCompact.xsd  linearRef.xsd  linearRefOffset.xsd  linearRefOffsetVector.xsd
UT/schemata/MathML3/: mathml3.xsd
UT/schemata/NewML12/: NewsML_1.2.xsd
UT/schemata/ODF12/: OpenDocument-v1.2-os-schema.xsd  anim.xsd  chart.xsd  config.xsd  db.xsd  dc.xsd  dr3d.xsd  draw.xsd  fo.xsd  form.xsd  grddl.xsd  math.xsd  meta.xsd  number.xsd  office.xsd  presentation.xsd  script.xsd  smil.xsd  style.xsd  svg.xsd  table.xsd  xforms.xsd  xhtml.xsd  xlink.xsd  xml.xsd
UT/schemata/OPC3/: opc-contentTypes.rng  opc-coreProperties.rnc  opc-coreProperties.rng  opc-coreProperties.xsd  opc-relationships.rng
UT/schemata/OXMLTran2/: shared-math.xsd  wml.xsd
UT/schemata/OXMLTran3/: dml-diagram.xsd  pml.xsd  shared-math.xsd  sml.xsd  supported.list  wml.xsd
UT/schemata/SBML2/: sbml.xsd
UT/schemata/SVG11/: svg11-basic.rng  svg11-tiny.rng  svg11.rng
UT/schemata/UBL21-common/: UBL-CommonAggregateComponents-2.1.xsd  UBL-CommonBasicComponents-2.1.xsd  UBL-CommonExtensionComponents-2.1.xsd  UBL-CommonSignatureComponents-2.1.xsd  UBL-CoreComponentParameters-2.1.xsd  UBL-ExtensionContentDataType-2.1.xsd  UBL-QualifiedDataTypes-2.1.xsd  UBL-SignatureAggregateComponents-2.1.xsd  UBL-SignatureBasicComponents-2.1.xsd  UBL-UnqualifiedDataTypes-2.1.xsd  UBL-XAdESv132-2.1.xsd  UBL-XAdESv141-2.1.xsd  UBL-xmldsig-core-schema-2.1.xsd
UT/schemata/UBL21-maindoc/: UBL-ApplicationResponse-2.1.xsd  UBL-AttachedDocument-2.1.xsd  UBL-AwardedNotification-2.1.xsd  UBL-BillOfLading-2.1.xsd  UBL-CallForTenders-2.1.xsd  UBL-Catalogue-2.1.xsd  UBL-CatalogueDeletion-2.1.xsd  UBL-CatalogueItemSpecificationUpdate-2.1.xsd  UBL-CataloguePricingUpdate-2.1.xsd  UBL-CatalogueRequest-2.1.xsd  UBL-CertificateOfOrigin-2.1.xsd  UBL-ContractAwardNotice-2.1.xsd  UBL-ContractNotice-2.1.xsd  UBL-CreditNote-2.1.xsd  UBL-DebitNote-2.1.xsd  UBL-DespatchAdvice-2.1.xsd  UBL-DocumentStatus-2.1.xsd  UBL-DocumentStatusRequest-2.1.xsd  UBL-ExceptionCriteria-2.1.xsd  UBL-ExceptionNotification-2.1.xsd  UBL-Forecast-2.1.xsd  UBL-ForecastRevision-2.1.xsd  UBL-ForwardingInstructions-2.1.xsd  UBL-FreightInvoice-2.1.xsd  UBL-FulfilmentCancellation-2.1.xsd  UBL-GoodsItemItinerary-2.1.xsd  UBL-GuaranteeCertificate-2.1.xsd  UBL-InstructionForReturns-2.1.xsd  UBL-InventoryReport-2.1.xsd  UBL-Invoice-2.1.xsd  UBL-ItemInformationRequest-2.1.xsd  UBL-Order-2.1.xsd  UBL-OrderCancellation-2.1.xsd  UBL-OrderChange-2.1.xsd  (+31 more)
dumco/cxx/: base_gendriver.py  cpp_file.py  opacity_manager.py
dumco/relax/: element_factory.py
dumco/schema/: all.py  any.py  attribute.py  base.py  check_eq.py  checks.py  choice.py  complex_type.py  dump_xsd.py  element.py  elements.py  enums.py  fb2_namer.py  model.py  namer.py  opacity_manager.py  oxml_namer.py  restriction.py  rng_types.py  schema.py  sequence.py  simple_type.py  simplify.py  tuples.py  uses.py  xsd_types.py
dumco/utils/: decorators.py  file_utils.py  horn.py  ns_converter.py  source_file.py  string_utils.py
dumco/xml/: parser.py
support/cxx/: XmlDataConsumer.h  XmlParsingState.h
(+709 files in other folders)
